// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ApartmentNumberField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="apartment_number"
      >
        Numer mieszkania
      </label>
      <div
        class="sc-lmgQde krpvJC"
      >
        <input
          class="sc-hBMVcZ kICbZw"
          id="testId"
          label="Numer mieszkania"
          name="apartment_number"
          placeholder="Numer mieszkania"
          value="12345678900"
        />
      </div>
      <span
        class="sc-ksluoS cNvzFC"
      >
        Podany numer mieszkania jest nieprawidłowy
      </span>
    </div>
  </form>
</div>
`;

exports[`<ApartmentNumberField /> matches snapshot 1`] = `
<input
  class="sc-hBMVcZ hoeMOd"
  id="testId"
  label="Numer mieszkania"
  name="apartment_number"
  placeholder="Numer mieszkania"
  value=""
/>
`;

exports[`<ApartmentNumberField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="apartment_number"
      >
        ApartmentNumber*
      </label>
      <div
        class="sc-lmgQde krpvJC"
      >
        <input
          class="sc-hBMVcZ kICbZw"
          id="testId"
          label="ApartmentNumber"
          name="apartment_number"
          placeholder="Numer mieszkania*"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-ksluoS cNvzFC"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<ApartmentNumberField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="apartment_number"
      >
        ApartmentNumber
      </label>
      <div
        class="sc-lmgQde krpvJC"
      >
        <input
          class="sc-hBMVcZ hoeMOd"
          id="testId"
          label="ApartmentNumber"
          name="apartment_number"
          placeholder="Numer mieszkania"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
